# sd-jwt-rust

./: Cargo.toml
generate/src/utils/: funcs.rs
src/: disclosure.rs  holder.rs  issuer.rs  lib.rs  utils.rs  verifier.rs
tests/: demos.rs
