[package]
name = "sd-jwt-rs_wasm"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rust reference implementation of the IETF SD-JWT specification (v7)."
rust-version = "1.67.0"
authors = ["Vikram Bhattacharjee <vikram@nymlab.it>"]

[dependencies]
base64 = "0.21"
hmac = "0.12"
jsonwebtoken_wasm = { git = "https://github.com/nymlab/jsonwebtoken.git", features = ["ptd"], rev = "a53baa94a342aedf8c5ae9e1613c566700b0c5ed", optional = true }
lazy_static = {  version = "1.4", optional = true }
log = "0.4"
rand = "0.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1.0.51"
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }

[features]
default = ["ptd"]
mock_salts = ["lazy_static"]
ptd = ["jsonwebtoken_wasm"]

[dev-dependencies]
rstest = "0.18.2"
regex = "1.10"
