[package]
name = "sd-jwt-rs_wasm"
version = "0.7.0"
edition = "2021"
license = "Apache-2.0 OR MIT"
description = "Rust reference implementation of the IETF SD-JWT specification (v7)."
rust-version = "1.67.0"
authors = ["Vikram Bhattacharjee <vikram@nymlab.it>"]

[dependencies]
base64 = "0.21"
hmac = "0.12"
jsonwebtoken = { version = "9.2", optional = true }
jsonwebtoken_wasm = { git = "https://github.com/nymlab/jsonwebtoken.git", features = ["ptd"], rev = "2d1affe41ee50aeb76cdf4e632887b8ccddbce15", optional = true }
lazy_static = {  version = "1.4", optional = true }
log = "0.4"
rand = "0.8"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = { version = "1.0.113", features = ["preserve_order"] }
sha2 = "0.10"
thiserror = "1.0.51"
strum = { version = "0.25", default-features = false, features = ["std", "derive"] }

[features]
default = ["ptd"]
upstream = ["jsonwebtoken"]
mock_salts = ["lazy_static", "jsonwebtoken"]
ptd = ["jsonwebtoken_wasm"]

[dev-dependencies]
rstest = "0.18.2"
regex = "1.10"

